--- a/intervenciones.html
+++ b/intervenciones.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/calendar.js" defer></script>
 </head>
 <body>
 
     <div id="header-placeholder"></div>
-
+    <!-- Calendar Section -->
+    <section id="calendar-container">
+        <h1>Calendario de Eventos</h1>
+        <div id="calendar-grid"></div>
+    </section>
     <!-- Hero Section -->
     <section class="hero-intervenciones">
         <h1>Todas las Intervenciones</h1>
