--- a/about-us.html
+++ b/about-us.html
@@ -26,8 +26,8 @@
             <container class="about-text">
                 <h2>Nuestra misión </h2>
                 <p>Queremos cambiar las reglas del juego: reducir las desigualdades de género y construir más justicia ambiental en Cali y el Pacífico Colombiano. ¿Cómo? Creando una comunidad ecofeminista consciente, solidaria y llena de acción, donde la vida siempre esté en el centro.</p>
-                <h2>Our Team</h2>
-                <p>Meet the passionate individuals behind KEF who are driving our mission forward.</p>
+                <h2>Nuestro Equipo</h2>
+                <p>Conoce a lxs apasionadxs miembrxs del equipo KEF.</p>
             </container>
             <div id="footer-placeholder"></div>
         </section>
