--- a/consumo.html
+++ b/consumo.html
@@ -34,8 +34,8 @@
 
     <!-- Blog CTA -->
     <section class="blog-cta">
-        <h2>Learn More About Activismo</h2>
-        <p>Check out our blog posts on Activismo to stay updated.</p>
+        <h2>Saber más sobre Colaboración</h2>
+        <p>Navega nuestras entradas sobre colaboración si quieres saber más o sumarte</p>
         <a href="blog.html?topic=consumo" class="cta-button-consumo">Visita nuestro Blog</a>
     </section>
     
