--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
                 <div class="contact-form">
                     <h1>Contáctanos</h1>
                     <p>Queremos leerte! Por favor escríbenos para cualquier duda que quieras aclarar o consulta que quieras hacer</p>
-                    <form action="/submit-form" method="POST">
+                    <form action="/submit-form" method="POST" data-netlify="true" name="contactanos-form">
                         <label for="name">Nombre</label>
                         <input type="text" id="name" name="name" required>
 
