--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                     <!--Banner 2: After Carousel (D9A9FB) -->
-                    <div class="moving-banner" style="background-color: #017935;">
+                    <div class="moving-banner" style="background-color: rgb(167, 187, 64);">
                         <div class="banner-text-b">
                             <ul>
                                 <li>AMIGAS</li>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <!-- Banner 3: After Conocenos (FF8080) -->
-                <div class="moving-banner" style="background-color: #ff4545;">
+                <div class="moving-banner" style="background-color: rgb(255, 128, 128);">
                     <div class="banner-text">
                         <ul>
                             <li>AMIGAS</li>
