Implemented Netlify function for interventions

--- a/header.html
+++ b/header.html
@@ -10,11 +10,11 @@
             <span></span>
         </label>
         <ul class="nav-links">
-            <li><a href="sumate.html">Sumate</a></li>
-            <li><a href="contact-us.html">Contactanos</a></li>
+            <li><a href="sumate.html">Súmate</a></li>
+            <li><a href="contact-us.html">Contáctanos</a></li>
             <li><a href="intervenciones.html">No te lo pierdas</a></li>
             <li><a href="blog.html">Blog KEF</a></li>
-            <li><a href="dona.html">Apoyanos</a></li>
+            <li><a href="dona.html">Apóyanos</a></li>
         </ul>
     </nav>
 </header>
