--- a/formacion.html
+++ b/formacion.html
@@ -18,7 +18,7 @@
     <section class="hero-formacion">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Formación</h1>
+                <h1>Educación</h1>
                 <p>Únete a nuestros programas de formación para conocer y explorar lo que nos mueve.</p>
                 <a href="contact-us.html" class="cta-button-formacion" style="margin: 1rem 0;"> Contáctanos</a>
             </div>
