carrusel, cartas formacion y equipo

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,13 @@
             <!-- Hero Section -->
             <container class="about-section">
                 <h1>Historia de una Juntanza</h1>
-                <p>¡Bienvenidxs a KEF, la Comunidad Ecofeminista!</p>
+            </container>
+            <container class="about-section">
+                <div class="about-us-image">
+                    <img src="/assets/images/COP16/PB8-2.jpeg">
+                </div>
+            </container>
+            <container class="about-section">
                 <p>KEF es un sueño compartido con nuestras familias, amigas, colegas y con toda la gente que, como nosotras, quiere un mundo más justo con todos los seres que habitamos en el.<br><br>
                 Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad. Desde entonces, no hemos parado de crecer ni de meterle ganas para hacer de Cali un lugar con más justicia ambiental y equidad de género.<br><br>
                 KEF nació cuando dos iniciativas independientes (Komoniu y Be Feminist) decidieron unir fuerzas. ¿Y quiénes estaban detrás? Pues dos hermanas caleñas con el firme convencimiento de que juntas llegamos más lejos, sobre todo cuando trabajamos por el cuidado de la vida. Desde entonces, nos hemos dedicado a educar, crear comunidad y poner en práctica la sostenibilidad, la economía circular, el amor por el planeta y, por supuesto, los feminismos.<br><br>
@@ -25,9 +31,30 @@
             <!-- About Content -->
             <container class="about-text">
                 <h2>Nuestra misión </h2>
-                <p>Queremos cambiar las reglas del juego: reducir las desigualdades de género y construir más justicia ambiental en Cali y el Pacífico Colombiano. ¿Cómo? Creando una comunidad ecofeminista consciente, solidaria y llena de acción, donde la vida siempre esté en el centro.</p>
+                <p>Queremos cambiar las reglas del juego: reducir las desigualdades de género y construir más justicia ambiental en Cali y el Pacífico Colombiano.<br><br>¿Cómo? Creando una comunidad ecofeminista consciente, solidaria y llena de acción, donde la vida siempre esté en el centro.</p>
                 <h2>Nuestro Equipo</h2>
-                <p>Conoce a lxs apasionadxs miembrxs del equipo KEF.</p>
+                <div class="card-container">
+                    <div class="card">
+                        <h3>Maria Camila Hernández Ceballos - Cofundadora de KEF - Coordinadora de Formación y Acción Educativa</h3>
+                        <p>Docente, investigadora y activista caleña, con más de 6 años de experiencia trabajando en la agenda de género y feminismos en Cali - Colombia. Ha sido consultora de proyectos de investigación e intervención social en prevención a violencias de género, trabajo del cuidado, educación sexual y diversidades. Desde 2020, ha liderado el proyecto Be Feminist Colombia, iniciativa dedicada a la protección de los derechos de las mujeres.</p>
+                    </div>
+                    <div class="card">
+                        <h3>Maria Alejandra Hernández Ceballos - Cofundadora de KEF - Coordinadora de Emprendimientos Ecofeministas</h3>
+                        <p>Economista y negociadora internacional caleña, con más de cinco años de experiencia en gestión administrativa, comercial y atención al cliente. Activista apasionada por el medio ambiente y el trabajo comunitario, ha liderado proyectos de responsabilidad social y planeación estratégica, enfocándose en la economía circular y el consumo responsable como fundadora de Komoniu. Destaca por su liderazgo, adaptabilidad,  habilidades en comunicación y trabajo en equipo, aportando soluciones innovadoras en entornos comerciales y sociales.</p>
+                    </div>
+                    <div class="card">
+                        <h3>Tatiana Rosero González - Coordinadora de Activismo y Desarrollo Comunitario</h3>
+                        <p>Profesional en Estudios Políticos y Resolución de Conflictos de la Universidad del Valle, con experiencia en el diseño y formulación de políticas públicas en el sector público, privado y en ONG. Ha trabajado con diversos grupos poblacionales en estrategias de participación ciudadana, control social e incidencia política. Se ha desempeñado en la formulación de Planes Integrales de Seguridad y Convivencia, así como en proyectos de prevención de violencias basadas en género en el sector de la seguridad. Actualmente, es parte de Amassuru, Red de Mujeres en Seguridad y Defensa LATAM.</p>
+                    </div>
+                    <div class="card">
+                        <h3>Maria Camila Ordóñez - Equipo de Comunicación y Presencia Digital</h3>
+                        <p>Abogada, comunicadora e investigadora interesada en el uso del derecho como herramienta de transformación social. Ha participado en espacios académicos y de activismo en defensa de la autonomía sexual y reproductiva en Cali, Colombia. Ha colaborado en investigaciones con el Observatorio para la Equidad de las Mujeres (OEM) y el Grupo de Acciones Públicas de la Universidad ICESI (GAPI), contribuyendo al análisis y la incidencia en temas de género y derechos humanos.</p>
+                    </div>
+                    <div class="card">
+                        <h3>Javier Núñez Jaimes - Equipo de Comunicación y Presencia Digital</h3>
+                        <p>Economista, desarrollador full stack y analista en ciberseguridad caleño, con más de ocho años de experiencia en el diseño e implementación de políticas públicas anticorrupción con enfoque en tecnologías de la información. Es cofundador y presidente de SoonTech, una consultora tecnológica canadiense con sede en Vancouver, y también es el desarrollador líder en KEF. Su labor está enfocada en diseñar y construir productos digitales que fortalezcan la comunidad y su impacto.</p>
+                    </div>
+                </div>
             </container>
             <div id="footer-placeholder"></div>
         </section>
