--- a/consumo.html
+++ b/consumo.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/main.js" defer></script>
     <script src="js/includes.js" defer></script>
-
 </head>
 <body>
-
     <!-- Header Section -->
     <div id="header-placeholder"></div>
-
     <!-- Hero Section -->
     <section class="hero-consumo">
         <div class="hero-content">
@@ -24,13 +21,21 @@
             </div>
         </div>
     </section>
-
-    <!-- Interventions Section -->
-    <section class="interventions interventions-consumo" id="interventions-list">
-        <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
-        <div id="interventions-container"></div>
-    </section>
-
+    <div class="colaboracion-section">
+        <h1>Nuestras Aliadas</h1>
+        <div class="logo-container">
+            <div class="logo"><img src="/assets/LogosAliadas/Ecolunas sin fondo.png" alt="Logo 1"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo AIZU .png" alt="Logo 2"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/LOGO AUDE.png" alt="Logo 5"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo de Féminas Iustradas.png" alt="Logo 6"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo De.Lu.jpeg" alt="Logo 7"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo Hilando Historias.jpeg" alt="Logo 9"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/LOGO HÜAITOTO FOUNDATION_BLANCO TRANSPARENTE.png" alt="Logo 10"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/LOGO SENTIRES DE LUNA .jpeg" alt="Logo 12"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
+        </div>    
+    </div>
     <!-- Blog CTA -->
     <section class="blog-cta">
         <h2>Saber más sobre Colaboración</h2>
@@ -38,9 +43,7 @@
         <a href="blog.html?topic=consumo" class="cta-button-consumo">Visita nuestro Blog</a>
     </section>
     
-
     <!-- Footer Section -->
     <div id="footer-placeholder"></div>
-
 </body>
 </html>
