--- a/formacion.html
+++ b/formacion.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/main.js" defer></script>
     <script src="js/includes.js" defer></script>
-
+    <script src="js/cursos.js" defer></script>
 </head>
 <body>
-
     <!-- Header Section -->
     <div id="header-placeholder"></div>
 
@@ -25,11 +24,7 @@
         </div>
     </section>
 
-    <!-- Interventions Section -->
-    <section class="interventions interventions-formacion" id="interventions-list">
-        <!-- Las intervenciones se renderizarán aquí mediante JavaScript -->
-        <div id="interventions-container"></div>
-    </section>
+    <div class="grid-container" id="courses-container"></div>
 
     <!-- Blog CTA -->
     <section class="blog-cta">
