--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                     <p>Juntas, hacemos que las cosas pasen.</p> 
                     <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
                 </div>
+                <div>
+                    <img src="assets/images/RevitalizaciónRíoPance/RP2.jpg" alt="KEF Team Image">
+                </div>
 
             </div>
             <!-- Know Us Full Section -->
@@ -127,9 +130,8 @@
                     <!-- Left Side: Text and CTA -->
                     <div class="conocenos-text">
                         <h2>Conócenos</h2>
-                        <p>Somos la Colectiva Feminista de Colombia. </p>
-                        <p>Nos dedicamos a crear espacios de educación, activismo, y apoyo comunitario.</p>
-                        <p>Únete a nosotros para marcar la diferencia.</p>
+                        <p>Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad</p>
+                        <p>Desde entonces, no hemos parado de crecer ni de meterle ganas para hacer de Cali un lugar con más justicia ambiental y equidad de género.</p>
                         <a href="about-us.html" class="cta-button">Más Info</a>
                     </div>
                 </div>
