--- a/sumate.html
+++ b/sumate.html
@@ -14,43 +14,50 @@
 
     <!-- Hero Section -->
     <section class="hero-sumate">
-        <h1>Súmate a Nuestra Causa</h1>
-        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad.</p>
-        <p>Trabajamos en tres líneas de acción: Activismo, Formación e Intervención, y Consumo Local y Consciente.</p>
+        <h1>Súmate a nuestra comunidad</h1>
+        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. Trabajamos en tres líneas de acción: Activismo, Formación e Intervención, y Colaboración.</p>
     </section>
-
     <!-- Activismo Section -->
     <section class="line-of-work">
         <h2>Activismo</h2>
+        <container class="about-section">
+            <div class="about-us-image">
+                <img src="/assets/images/8M-2025/8M254.jpg">
+            </div>
+        </container>
         <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación, y defensa de los derechos humanos.</p>
-        <p><strong>Actividades:</strong> Manifestaciones, campañas en redes sociales, charlas y talleres.</p>
-        <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la concienciación.</p>
+        <p><strong>Actividades:</strong> Marchas, intervenciones urbanas, acciones simbólicas y campañas.</p>
+        <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana a través de acciones colectivas.</p>
         <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más sobre Activismo</a>
     </section>
-
     <!-- Formación e Intervención Section -->
     <section class="line-of-work">
         <h2>Formación</h2>
+        <container class="about-section">
+            <div class="about-us-image">
+                <img src="/assets/images/VocesValientes/Voces1-2.jpeg">
+            </div>
+        </container>
         <p>Formar a la próxima generación de líderes sociales y realizar intervenciones directas en comunidades es parte fundamental de nuestra misión. Al unirte, coordinarás talleres, capacitaciones, y programas de intervención.</p>
-        <p><strong>Actividades:</strong> Talleres, cursos, programas de formación, y proyectos de intervención comunitaria.</p>
-        <p><strong>Foco principal:</strong> Capacitar y empoderar a las comunidades para generar un impacto sostenible.</p>
+        <p><strong>Actividades:</strong>Talleres, charlas, encuentros y espacios de aprendizaje con las comunidades.</p>
+        <p><strong>Foco principal:</strong>Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
         <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Educación</a>
     </section>
 
     <!-- Consumo Local y Consciente Section -->
     <section class="line-of-work">
         <h2>Colaboración</h2>
-        <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo. Al unirte, coordinarás campañas de concienciación y eventos que promueven prácticas de consumo consciente.</p>
-        <p><strong>Actividades:</strong> Campañas educativas, ferias locales, y alianzas con productores sostenibles.</p>
-        <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que respetan el medio ambiente.</p>
+        <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo.  Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
+        <p><strong>Actividades:</strong>Alianzas, estrategias de concientización y ferias locales.</p>
+        <p><strong>Foco principal:</strong>Fomentar el consumo local y las prácticas sostenibles que ponen el cuidado de la vida en el centro de todo.</p>
         <a href="consumo.html" class="cta-button" style="background-color: #99CC33;">Más sobre Colaboración</a>
     </section>
 
     <!-- Join Us CTA Section -->
     <section class="join-cta">
-        <h2>¿Listx para Unirte?</h2>
+        <h2>¿Listx para sumarte?</h2>
         <p>Si estás interesado en unirte a alguna de nuestras líneas de acción, completa el formulario y nos pondremos en contacto contigo.</p>
-        <a href="contact-us.html" class="cta-button">Únete Ahora</a>
+        <a href="contact-us.html" class="cta-button">Súmate ahora</a>
     </section>
 
     <div id="footer-placeholder"></div>
