--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
             <li><a href="about-us.html">Conócenos</a></li>
             <li><a href="sumate.html">Súmate</a></li>
             <li><a href="contact-us.html">Contáctanos</a></li>
-            <li><a href="intervenciones.html">No te lo pierdas</a></li>
+            <li><a href="eventos.html">No te lo pierdas</a></li>
             <li><a href="blog.html">Blog KEF</a></li>
             <li><a href="dona.html">Apóyanos</a></li>
         </ul>
